# nrf-btmouse

./: .gitignore  CMakeLists.txt  README.md  nrf7002dk_nrf5340_cpuapp.overlay  prj.conf
src/: kbd.c  kbd.h  main.c  nfc.c  nfc.h
